# stopwatch

./: .buildinfo  .pre-commit-config.yaml  Makefile  README.md  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  support.html
.doctrees/: environment.pickle  index.doctree  install.doctree  support.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/src/: index.doctree
.doctrees/autoapi/src/exceptions/: index.doctree
.doctrees/autoapi/src/stop_watch/: index.doctree
.github/workflows/: ci.yml  docs.yml  python.yml
_sources/: index.rst.txt  support.rst.txt
_sources/autoapi/src/: index.rst.txt
_sources/autoapi/src/exceptions/: index.rst.txt
_sources/autoapi/src/stop_watch/: index.rst.txt
autoapi/: index.html
autoapi/src/: index.html
autoapi/src/exceptions/: index.html
autoapi/src/stop_watch/: index.html
docs/: conf.py  install.rst
src/: __init__.py  exceptions.py  stop_watch.py
tests/: test_stop_watch.py
