[tool.black]
target-version = ['py312']
line-length = 128

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only include the src directory in wheel
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
# Make it so that the package can be imported via `import stopwatch` in wheel
"src" = "stopwatch"

[tool.hatch.build.targets.sdist]
# Only include the src directory in sdist
packages = ["src"]

[tool.hatch.build.targets.sdist.sources]
# Make it so that the package can be imported via `import stopwatch` in sdist
"src" = "stopwatch"


[project]
name = "stopwatch"
version = "1.0.0"
authors = [
  { name="Alex Lambson", email="" },
]
description = "A stop watch for Python projects that can't afford real tracing."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/alexlambson/stopwatch/"
Issues = "https://github.com/alexlambson/stopwatch/issues"
